# ValueBasedPricingProgram

./: Procfile  README.md  manage.py  requirements.txt
backend/: Sentiment by Year country and isbosch.ipynb  Split by Sentiment and Subcat.ipynb  api.py  model.joblib  model.py  pyproject.toml  requirements.txt
backend/coeff_lists/: Malaysia Wipers 2019_Bosch.csv  Malaysia Wipers 2019_Others.csv  Malaysia Wipers 2020_Bosch.csv  Philippines Wipers 2019_Bosch.csv  Philippines Wipers 2020_Bosch.csv  Philippines Wipers 2020_Others.csv  Singapore Wipers 2019_Bosch.csv  Singapore Wipers 2020_Bosch.csv  Singapore Wipers 2020_Others.csv
backend/competitor_models/: Malaysia Wipers 2019.joblib  Malaysia Wipers 2020.joblib  Philippines Wipers 2019.joblib  Philippines Wipers 2020.joblib  Singapore Wipers 2019.joblib  Singapore Wipers 2020.joblib
backend/models/: Malaysia Wipers 2019_Advantage.joblib  Malaysia Wipers 2019_Aerotwin Plus.joblib  Malaysia Wipers 2019_Aerotwin Retro.joblib  Malaysia Wipers 2019_Aerotwin.joblib  Malaysia Wipers 2019_All.joblib  Malaysia Wipers 2019_Clear Advantage.joblib  Malaysia Wipers 2019_No Subcategory.joblib  Malaysia Wipers 2020_Advantage.joblib  Malaysia Wipers 2020_Aerotwin Plus.joblib  Malaysia Wipers 2020_Aerotwin Retro.joblib  Malaysia Wipers 2020_Aerotwin.joblib  Malaysia Wipers 2020_All.joblib  Malaysia Wipers 2020_No Subcategory.joblib  Phillipines Wipers 2019_Advantage.joblib  Phillipines Wipers 2019_Aerotwin.joblib  Phillipines Wipers 2019_All.joblib  Phillipines Wipers 2019_Clear Advantage.joblib  Phillipines Wipers 2020_All.joblib  (+17 more)
(+85 files in other folders)
