[tool.poetry]
name = "bosch-project-backend"
version = "0.1.0"
description = ""
authors = ["callistachang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
joblib = "^1.0.1"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
